objects/AIA_Plan_Grouper__c.object
<CustomObject>
    <fields>
        <fullName>AnnualMaximumApplies__c</fullName>
        <label>AnnualMaximumApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>CoInsurance_AddIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance AddIncrement</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_High__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance High</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Increment__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance Increment</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_InvalidIncrement__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance InvalidIncrement</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance_Low__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance Low</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CoInsurance__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CoInsurance</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DavisString__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>DavisString</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DeductibleApplies__c</fullName>
        <label>DeductibleApplies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ExtID__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISExisting_Grouper__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ISExisting_Grouper</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsCovered__c</fullName>
        <label>IsCovered</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>True</fullName>
                </value>
                <value>
                    <fullName>False</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PCS_Grouper_Id__c</fullName>
        <description>Grouper Id coming from PCS</description>
        <encryptionScheme>None</encryptionScheme>
        <label>PCS Grouper Id</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlanId__c</fullName>
        <formula>CASESAFEID(Plan_Network__r.Plan__r.Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>PlanId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan_Grouper_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Plan Grouper Name</label>
        <length>524</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Network__c</fullName>
        <label>Plan Network</label>
        <referenceTo>AIA_Plan_Network__c</referenceTo>
        <relationshipLabel>Plan Grouper</relationshipLabel>
        <relationshipName>Plan_Grouper</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>Plan Grouper</relationshipLabel>
        <relationshipName>Plan_Grouper2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Type__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BRF</fullName>
                </value>
                <value>
                    <fullName>BDD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Benefit Group</fullName>
                </value>
                <value>
                    <fullName>Cost Share Group</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Plan Grouper</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Benefit Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plan Grouper</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>